# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: app_check.yml  superlinter.yml
gendiff/: __init__.py  gendiff.py  makediff.py  parser.py
gendiff/formats/: json.py  make_sorted.py  plain.py  stylish.py  stylish.py.save
gendiff/scripts/: .gendiff.py.swp  gendiff.py
tests/: .test_diff.py.swp  test_diff.py
tests/fixtures/: answer_json.json
